@@ -202,11 +202,12 @@ extern int arch_blocked(archetype *at, mapstruct *m, int x, int y);
 extern int arch_out_of_map(archetype *at, mapstruct *m, int x, int y);
 extern void fix_container(object *container);
 extern void load_objects(mapstruct *m, FILE *fp, int mapflags);
-extern void save_objects(mapstruct *m, FILE *fp, FILE *fp2);
+extern void save_objects(mapstruct *m, FILE *fp, FILE *fp2, int flag);
 extern mapstruct *get_linked_map(void);
 extern void allocate_map(mapstruct *m);
 extern mapstruct *get_empty_map(int sizex, int sizey);
 extern mapstruct *load_original_map(char *filename, int flags);
+extern mapstruct *load_overlay_map(char *filename, mapstruct *m);
 extern int new_save_map(mapstruct *m, int flag);
 extern void clean_object(object *op);
 extern void free_all_objects(mapstruct *m);
@@ -379,3 +380,4 @@ extern void free_all_treasures(void);
 extern int random_roll(int min, int max, object *op, int goodbad);
 extern int die_roll(int num, int size, object *op, int goodbad);
 extern int rndm(int min, int max);
+extern void decay_objects(mapstruct *m);
